--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 
 [dependencies]
 rand = "0.8.1"
+crossbeam-utils = "0.8.3"
 
 [dependencies.clap]
 version = "2.33.3"
@@ -15,3 +16,4 @@ default-features = false
 [profile.release]
 panic = 'abort'
 lto = 'fat'
+debug = true
