solver: get the number of cpus at runtime

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 [dependencies]
 rand = "0.8.1"
 crossbeam-utils = "0.8.3"
+num_cpus = "1.13.0"
 
 [dependencies.clap]
 version = "2.33.3"
