data files now contain the answer

--- a/data/cyprus-2020-01-21.toml
+++ b/data/cyprus-2020-01-21.toml
@@ -2208,3 +2208,11 @@ h0 = 16.000000
 t = 3.500000
 name = "George T"
 exp = 5
+
+[answer]
+lat = 33.1
+lon = 34.3
+h = 43300
+vx = 7.5
+vy = -23.5
+vz = -11.9
