--- a/data/florida-2021-04-13.toml
+++ b/data/florida-2021-04-13.toml
@@ -3549,3 +3549,11 @@ h0 = 35.000000
 t = 1.500000
 name = "Raymond C"
 exp = 4
+
+[answer]
+lat = 26.8
+lon = -79.1
+h = 44400
+vx = -2.8
+vy = 12.6
+vz = 5.6
