--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
+
 [package]
 name = "fireball"
 version = "0.1.0"
@@ -18,6 +19,8 @@ clap = { version = "2", default-features = false }
 
 scad-gen = { path = "./scad-gen" }
 histogram = { path = "./histogram" }
+
+autodiff = "0.5"
 
 [dev-dependencies]
 proptest = "1.0"
