--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,3 @@
-
 [package]
 name = "fireball"
 version = "0.1.0"
@@ -6,10 +5,17 @@ authors = ["Max Verevkin"]
 description = "This program aims to reconstruct the trajectory of a fireball given only data collected from witnesses"
 edition = "2021"
 
+[workspace]
+members = [
+    "da-corrector",
+	"coomon",
+	"scad-gen",
+	"fetch-imo",
+]
+
 [dependencies]
-plotters = "0.3"
-rand_distr = "0.4"
-rand = { version = "0.8", features = ["nightly", "small_rng"] }
+common = { path = "./common" }
+
 assert_approx_eq = "1.1"
 
 toml = "0.5"
@@ -18,9 +24,12 @@ serde = { version = "1", features = ["derive"] }
 clap = { version = "2", default-features = false }
 
 scad-gen = { path = "./scad-gen" }
-histogram = { path = "./histogram" }
-
-autodiff = "0.5"
+image = { version = "0.24.5", default-features = false, features = ["png"] }
 
 [dev-dependencies]
 proptest = "1.0"
+criterion = "0.3"
+
+[[bench]]
+name = "lambda"
+harness = false
