--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ toml = "0.7"
 serde = { version = "1", features = ["derive"] }
 clap = { version = "4", features = ["derive"] }
 image = { version = "0.24.5", default-features = false, features = ["png"] }
+rayon = "1"
 
 [dev-dependencies]
 proptest = "1.0"
