--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,9 @@ serde = { version = "1", features = ["derive"] }
 clap = { version = "4", features = ["derive"] }
 image = { version = "0.24.5", default-features = false, features = ["png"] }
 rayon = "1"
+serde_json = "1.0.107"
+yansi = "0.5"
+plotter = { path = "../plotter" }
 
 [dev-dependencies]
 proptest = "1.0"
@@ -29,3 +32,6 @@ criterion = "0.4"
 [[bench]]
 name = "lambda"
 harness = false
+
+[profile.release]
+debug = true
